# corona_school_matching

./: .gitignore  CMakeLists.txt  balancing_coefficients.json  binding.gyp  costs.h  graph_creator.cpp  graph_creator.h  index.cpp  main.cpp  matching.h  package-lock.json  package.json  stats.h  types.cpp  types.h
boost_includes/boost/: throw_exception.hpp
boost_includes/boost/algorithm/: minmax.hpp
boost_includes/boost/archive/: basic_archive.hpp
examples/: first.json  first_input.json
src/: algo.h  costs.h  graph_creator.cpp  main.cpp  matching.h  stats.h  types.h
src/cli/: index.ts
src/module/: run.ts
